k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30007
