k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort
  selector:
    app: product-service
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30008
